--- a/theme/templates/components/card.html
+++ b/theme/templates/components/card.html
@@ -16,7 +16,7 @@ Parâmetros:
 -->
 
 {% with show_dividers=show_dividers|default:False %}
-<div class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm {{ class|default:'' }}">
+<div class="bg-card text-card-foreground flex flex-col gap-6 rounded-radius-lg border py-6 shadow-sm {{ class|default:'' }}">
     {% if title or description or action %}
         <div class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 
             {% if action %}grid-cols-[1fr_auto]{% endif %}
