--- a/theme/templates/components/input.html
+++ b/theme/templates/components/input.html
@@ -43,7 +43,7 @@ Parâmetros:
         class="file:text-foreground placeholder:text-muted-foreground 
             selection:bg-primary selection:text-primary-foreground 
             dark:bg-input/30 border-input flex h-9 w-full min-w-0 
-            rounded-md border bg-transparent text-base shadow-xs 
+            rounded-radius-md border bg-transparent text-base shadow-xs 
             transition-[color,box-shadow] outline-none 
             file:inline-flex file:h-7 file:border-0 file:bg-transparent 
             file:text-sm file:font-medium 
